--- a/css/style.css
+++ b/css/style.css
@@ -2,69 +2,88 @@ body {
   overflow-x: hidden;
   font-family: "Montserrat", sans-serif;
 }
+
 .search-field {
   border: none;
   border-radius: 50px;
-  padding: 5px;
+  padding: 10px;
   outline: none;
 }
+
 .search-field:hover {
   outline: none;
   border: none;
 }
+
 .search-box {
-  border: 1px solid rgb(3, 118, 211);
-  width: 281px;
+  display: flex;
+  border: 2px solid rgb(3, 118, 211);
+  width: 20%;
   border-radius: 5px;
-  margin: auto;
-  margin-top: 50px;
-  border-right: none;
+  margin: 40px auto;
 }
+
 .search-button {
-  padding: 10px 50px;
-  border-radius: 25px;
-  margin-left: 20px;
+  border-radius: 0;
+  margin-left: auto;
 }
+
 #all-products {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
+  grid-gap: 20px;
+  break-inside: avoid;
   /* border: 1px solid black; */
   text-align: center;
   width: 100%;
-  margin: auto;
   align-items: center;
   justify-content: center;
+  padding: 30px;
 }
-.single-product {
-  padding: 10px;
+
+.product{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  box-shadow: 0 0 5px rgba(128, 128, 128, 0.445);
+  height: 100%;
   transition: 0.6s;
-}
-.single-product:hover {
-  box-shadow: 4px 4px 7px gray;
   border-radius: 10px;
-  border: 1px solid cyan;
 }
+
+.single-product {
+  padding: 25px;
+}
+
+.product:hover {
+  box-shadow: 4px 4px 7px gray;
+}
+
 .product-image {
   width: 150px;
-  height: 150px;
+  /* height: 150px; */
 }
+
 .cart {
   width: 350px;
   /* border: 1px solid green; */
-  padding: 10px;
+  padding: 30px;
   box-shadow: 10px 10px 20px gray;
   border-radius: 5px;
-  margin-right: 30px;
+  margin-left: 25px;
   position: fixed;
 }
+
 .cart-main {
   padding-right: 30px;
 }
+
 @media only screen and (max-width: 768px) {
   #all-products {
     display: grid;
     grid-template-columns: repeat(1, 1fr);
   }
+
   .cart {
     width: 300px;
     /* border: 1px solid green; */
@@ -74,10 +93,12 @@ body {
     margin-right: 30px;
     position: fixed;
   }
+
   .cart-main {
     padding-right: 10px;
   }
 }
+
 @media only screen and (max-width: 468px) {
   #all-products {
     display: grid;
