some color changes

--- a/css/style.css
+++ b/css/style.css
@@ -18,9 +18,10 @@ body {
 .search-box {
   display: flex;
   border: 2px solid rgb(3, 118, 211);
-  width: 20%;
+  width: 50%;
   border-radius: 5px;
   margin: 40px auto;
+  overflow: hidden;
 }
 
 .search-button {
